update readme, add AMD packages

--- a/user_configuration.json
+++ b/user_configuration.json
@@ -68,6 +68,8 @@
     "iwd",
     "jre-openjdk",
     "kitty",
+    "lib32-mesa",
+    "lib32-vulkan-radeon",
     "libreoffice-fresh",
     "linux-firmware",
     "lua",
@@ -113,6 +115,7 @@
     "ttf-nerd-fonts-symbols",
     "udisks2",
     "upower",
+    "vulkan-radeon",
     "wayland",
     "wget",
     "wl-clipboard",
