add ebook tools

--- a/user_configuration.json
+++ b/user_configuration.json
@@ -55,7 +55,9 @@
     "dunst",
     "dust",
     "easyeffects",
+    "ebook-tools",
     "efibootmgr",
+    "foliate",
     "fwupd",
     "gamemode",
     "gimp",
