--- a/user_configuration.json
+++ b/user_configuration.json
@@ -70,6 +70,7 @@
     "iwd",
     "jre-openjdk",
     "kitty",
+    "lazygit",
     "lib32-mesa",
     "lib32-vulkan-radeon",
     "libreoffice-fresh",
