--- a/user_configuration.json
+++ b/user_configuration.json
@@ -110,6 +110,7 @@
     "swaybg",
     "swayidle",
     "tldr",
+    "tree-sitter-cli",
     "ttf-fira-code",
     "ttf-firacode-nerd",
     "ttf-fira-mono",
