add niri dependencies

--- a/user_configuration.json
+++ b/user_configuration.json
@@ -47,8 +47,10 @@
     "bluez",
     "bluez-utils",
     "brightnessctl",
+    "cava",
     "chezmoi",
     "cifs-utils",
+    "cliphist",
     "curl",
     "dhcpcd",
     "dialog",
@@ -80,9 +82,11 @@
     "man-db",
     "man-pages",
     "mangohud",
+    "matugen",
     "mpv",
     "mtools",
     "neovim",
+    "niri",
     "nfs-utils",
     "nodejs",
     "noto-fonts",
@@ -96,17 +100,18 @@
     "pacman-mirrorlist",
     "pass",
     "pass-otp",
+    "playerctl",
     "polkit",
     "polkit-gnome",
     "powertop",
     "python",
     "qt5ct",
+    "qt6-multimedia-ffmpeg",
     "ripgrep",
     "rsync",
     "slurp",
     "steam",
     "sudo",
-    "sway",
     "swaybg",
     "swayidle",
     "tldr",
@@ -124,7 +129,10 @@
     "wget",
     "wl-clipboard",
     "wofi",
+    "xdg-desktop-portal",
+    "xdg-desktop-portal-gtk",
     "xorg-xwayland",
+    "xwayland-satellite",
     "zed"
   ],
   "parallel_downloads": 5,
