--- a/user_configuration.json
+++ b/user_configuration.json
@@ -54,12 +54,10 @@
     "curl",
     "dhcpcd",
     "dialog",
-    "dunst",
     "dust",
     "easyeffects",
-    "ebook-tools",
     "efibootmgr",
-    "foliate",
+    "fuzzel",
     "fwupd",
     "gamemode",
     "gimp",
@@ -79,6 +77,7 @@
     "linux-firmware",
     "lua",
     "make",
+    "mako",
     "man-db",
     "man-pages",
     "mangohud",
@@ -94,6 +93,7 @@
     "ntfs-3g",
     "nwg-look",
     "openssh",
+    "otf-commit-mono-nerd",
     "otf-font-awesome",
     "p7zip",
     "pacman-contrib",
@@ -109,11 +109,12 @@
     "qt6-multimedia-ffmpeg",
     "ripgrep",
     "rsync",
-    "slurp",
     "steam",
     "sudo",
     "swaybg",
     "swayidle",
+    "swaylock",
+    "tela-circle-icon-theme-grey",
     "tldr",
     "tree-sitter-cli",
     "ttf-fira-code",
@@ -128,12 +129,10 @@
     "wayland",
     "wget",
     "wl-clipboard",
-    "wofi",
     "xdg-desktop-portal",
     "xdg-desktop-portal-gtk",
     "xorg-xwayland",
-    "xwayland-satellite",
-    "zed"
+    "xwayland-satellite"
   ],
   "parallel_downloads": 5,
   "profile_config": {
