--- a/user_configuration.json
+++ b/user_configuration.json
@@ -131,6 +131,7 @@
     "wl-clipboard",
     "xdg-desktop-portal",
     "xdg-desktop-portal-gtk",
+    "xdg-desktop-portal-gnome",
     "xorg-xwayland",
     "xwayland-satellite"
   ],
