--- a/user_configuration.json
+++ b/user_configuration.json
@@ -66,6 +66,7 @@
     "gnupg",
     "go",
     "gparted",
+    "gtklock",
     "htop",
     "iw",
     "iwd",
@@ -114,7 +115,6 @@
     "sudo",
     "swaybg",
     "swayidle",
-    "swaylock",
     "tela-circle-icon-theme-grey",
     "tldr",
     "tree-sitter-cli",
@@ -127,6 +127,7 @@
     "udisks2",
     "upower",
     "vulkan-radeon",
+    "waybar",
     "wayland",
     "wget",
     "wl-clipboard",
